<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_main_ID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"

    android:orientation="vertical"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:id="@+id/Layout_funactionBar_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_blue_green"
        android:gravity="left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="left"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"

                android:layout_weight="0"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_cloud_off" />

                <Button
                    android:id="@+id/btn_login_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/String_Login"
                    app:icon="@drawable/ic__account" />

                <TextView
                    android:id="@+id/textView_User_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0"
                    android:text="未登入"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="right"

                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_upload_ID"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="0dp"
                        android:layout_weight="0"
                        app:icon="@drawable/ic_upload" />

                    <Button
                        android:id="@+id/btn_addList_ID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:icon="@android:drawable/ic_input_add" />

                    <Button
                        android:id="@+id/btn_setting_ID"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="0dp"
                        android:layout_weight="0"
                        android:background="@drawable/ic_settings"
                        android:text="Button" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_main_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="800"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/Layout_dictionary_ID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/Layout_searchBar_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/vocabulary_background"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"

                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        >

                        <EditText
                            android:id="@+id/edit_translateInput"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"

                            android:layout_marginBottom="8dp"

                            android:ems="10"
                            android:hint="@string/String_Input_Translate"
                            android:inputType="textPersonName"
                            android:paddingVertical="10dp"
                            android:text=""
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/btn_translate_ID"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/btn_translate_ID"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn"

                            android:textAlignment="center"
                            app:icon="@android:drawable/ic_menu_search"
                            app:iconPadding="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/edit_translateInput"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/vocabulary_background"
                    android:elevation="5dp"
                    android:gravity="top|start"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_inputTranslate_ID"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="English"
                            android:textSize="35dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/btn_TTS_ID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn"
                            app:icon="@drawable/voice"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:id="@+id/Layout_switchLanguage_ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_LanguageFrom_ID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="English"
                            android:textAlignment="center" />

                        <Button
                            android:id="@+id/btn_switchLanguage_ID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="⇆" />

                        <TextView
                            android:id="@+id/textViewLanguageTo_ID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="中文"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_translateOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="中文"
                        android:textSize="26dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0">

                        <Button
                            android:id="@+id/btn_addWordToList_ID"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:layout_weight="0"
                            android:background="@drawable/ic_baseline_add_circle_24"
                            android:elevation="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <ImageView
                            android:id="@+id/img_translate_ID"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|right"
                        android:orientation="horizontal">


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_exam_ID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:paddingTop="100dp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible"

                >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="題數"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <Button
                        android:id="@+id/btn_enCountExam_ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:text="+"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_countExam_ID"
                        android:layout_width="wrap_content"
                        android:layout_height="67dp"
                        android:text="10"
                        android:textSize="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_enCountExam_ID"
                        app:layout_constraintStart_toEndOf="@+id/btn_deCountExam_ID"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_deCountExam_ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="-"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_startExam_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="開始測驗"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/exam_pic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_wordList_ID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerView_wordList_ID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="0dp"
                    android:padding="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_Bottom_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#0D4C92"
        android:gravity="center"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dictionary_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BTN_dictionary"

            app:icon="@android:drawable/ic_menu_search" />

        <Button
            android:id="@+id/btn_list_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BTN_vocabulary_list"
            app:icon="@android:drawable/ic_menu_sort_by_size" />

        <Button
            android:id="@+id/btn_exam_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BTN_exam"
            app:icon="@android:drawable/ic_menu_edit" />
    </LinearLayout>
</LinearLayout>